<resources>
    <string name="app_name">Cafe</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="greetings">Здравствуйте %s! Что желаете? </string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additives">Что добавить в %s</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink_type">Выберите тип напитка</string>
    <string name="make_order">Сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drink_type">Тип напитка:</string>
    <string name="additives_label">Добавки:</string>
    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Черный</item>
    </array>
    <array name="types_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </array>
    <array name="types_of_juice">
        <item>Апельсиновый</item>
        <item>Яблочный</item>
        <item>Персиковый</item>
        <item>Томатный</item>
    </array>
    <string name="error_fields_empty">Пожалуйста, заполните все поля!</string>
    <string name="juice">Сок</string>
    <string name="water">Вода</string>
    <string name="drinks">Напитки</string>
    <string name="snacks">Закуски</string>
    <string name="desserts">Десерты</string>
    <string name="combo">Комбо</string>
    <string name="pizza">Пицца</string>
    <string name="menu">Меню</string>
    <string name="margarita">Маргарита</string>
    <string name="pepperoni">Пепперони</string>
    <string name="hawaiian">Гавайская</string>
    <string name="doubleChicken">Двойной цыпленок</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="cartIsEmpty">Корзина пуста. Добавьте товар в корзину!</string>
</resources>