<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="24dp"
            android:contentDescription="@null"
            android:padding="80dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/undraw_order_confirmed_re_g0if" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="Ваш заказ оформлен"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_button"
            android:textSize="24dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonShowCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:backgroundTint="@color/dark_blue_button"
            android:text="Показать чек"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayoutCheck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="Заказ № %s .............................."
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="22dp"

                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="18dp"
                tools:text="Tamerlan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/drink"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="18dp"
                tools:text="Кофе" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/drink_type"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDrinkType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="18dp"
                tools:text="Латте" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/additives_label"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAdditives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_button"
                android:textSize="18dp"
                tools:text="[Молоко, сахар]" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Итог .................................. %s"
                android:textAlignment="center"

                android:textColor="@color/dark_blue_button"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>